<resources>
    <string name="app_name">Android Starter</string>
    <string name="label_settings">Settings</string>
    <string name="label_help">Help</string>
    <string name="action_show_another_fragment">Show another fragment</string>
    <string name="msg_what_up_this_is_another_fragment">What up! This is another fragment!</string>
    <string name="general_error_label">Error</string>

    <string name="general_share_action">Share</string>
    <string name="general_done_action">Done</string>
    <string name="general_copy_action">Copy</string>
    <string name="general_continue_action">Continue</string>
    <string name="general_cancel_action">Cancel</string>
    <string name="general_show_details_action">Show details</string>
    <string name="general_error_no_compatible_app_found_msg">No compatible app found to handle this request.</string>

    <string name="debug_debuglog_size_label">Size</string>
    <string name="debug_debuglog_size_compressed_label">Compressed size</string>
    <string name="debug_notification_channel_label">Debug notifications</string>
    <string name="debug_debuglog_file_label">Recorded log file</string>
    <string name="debug_debuglog_recording_progress">Recording debug log</string>
    <string name="debug_debuglog_record_action">Record debug log</string>
    <string name="debug_debuglog_stop_action">Stop recording</string>
    <string name="debug_debuglog_sensitive_information_message">The generated file contains sensitive information. Only share it with trusted parties.</string>
    <string name="settings_debuglog_explanation">This feature records everything the app is doing into a shareable file. The generated file may contain sensitive information. Only share it with trusted parties (e.g. a developer that is troubleshooting an issue).</string>

    <string name="settings_privacy_policy_label">Privacy policy</string>
    <string name="settings_privacy_policy_desc">Handling data responsibly.</string>
    <string name="settings_licenses_label">Licenses</string>
    <string name="general_thank_you_label">Thank you</string>
    <string name="settings_category_other_label">Other</string>

    <string name="general_settings_label">General</string>
    <string name="general_settings_desc">General tweaks that affect the whole app.</string>

    <string name="settings_category_ui_label">User interface</string>

    <string name="ui_theme_mode_setting_label">Theme mode</string>
    <string name="ui_theme_mode_setting_explanation">The mode used when theming the app (e.g. night or day).</string>
    <string name="ui_theme_mode_dark_label">Dark</string>
    <string name="ui_theme_mode_light_label">Light</string>
    <string name="ui_theme_mode_system_label">System</string>

    <string name="ui_theme_style_setting_label">Theme style</string>
    <string name="ui_theme_style_setting_explanation">The color style used when theming the app.</string>
    <string name="ui_theme_style_default_label">Default</string>
    <string name="ui_theme_style_materialyou_label">Material You</string>

    <string name="settings_support_label">Support</string>
    <string name="documentation_label">Documentation</string>
    <string name="discord_label">Discord</string>
    <string name="discord_description">A place to hang out in and ask questions.</string>
    <string name="issue_tracker_label">Issue tracker</string>
    <string name="issue_tracker_description">A public issue tracker for bug reports and feature requests.</string>
    <string name="support_installid_label">Install ID</string>
    <string name="support_installid_desc">Automatic error reports are anonymous. Share your install ID if the developer needs to find your error reports.</string>
    <string name="support_debuglog_label">Debug log</string>
    <string name="support_debuglog_desc">Record everything the app is doing into a text file that you can share.</string>

    <string name="changelog_label">Changelog</string>
    <string name="settings_acknowledgements_label">Acknowledgements</string>
</resources>